--- a/Tutorials/Django Tutorials/html_level_one/HTML_Level_One_Assessment.html
+++ b/Tutorials/Django Tutorials/html_level_one/HTML_Level_One_Assessment.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>EXERCISE TITLE</title>
-</head>
-<body>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>EXERCISE TITLE</title>
+  </head>
+  <body>
     <h1>Welcome to my Website!</h1>
     <p>I'm excited to eventually learn Django!</p>
     <a href="https://www.djangoproject.com/">
