--- a/Tutorials/Django Tutorials/html_level_one/Part1_html_basics.html
+++ b/Tutorials/Django Tutorials/html_level_one/Part1_html_basics.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html>
+  <head>
     <!--  The head contains Meta-data -->
     <!-- Use html+Tab to get the boilerplate  -->
     <!-- Use cmd+/ to get the html comment line -->
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Basics Part One</title>
-</head>
-<body>
-  <!-- The body contains the actual content -->
+    <meta charset="utf-8">
+    <title> This is the Title! </title>
+  </head>
+  <body>
+    <!-- The body contains the actual content -->
 
-</body>
+  </body>
 </html>
