--- a/Tutorials/Django Tutorials/html_level_one/Part3_html_lists.html
+++ b/Tutorials/Django Tutorials/html_level_one/Part3_html_lists.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>DoBasics Part Three</title>
-</head>
-<body>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Basics Part Three</title>
+  </head>
+  <body>
     <!-- Link for all the elements/tags: -->
     <!-- https://developer.mozilla.org/en-US/docs/Web/HTML/Element -->
     <h1>This is a Heading 1</h1>
