--- a/Tutorials/Django Tutorials/html_level_one/Part4_divs_spans.html
+++ b/Tutorials/Django Tutorials/html_level_one/Part4_divs_spans.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Basics Part 4</title>
-</head>
-<body>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Basics Part 4</title>
+  </head>
+  <body>
     <!--  Using a div tag will group elements together-->
     <!--  It is a generic container (block-level)-->
     <!--  Later on we will see the application for this-->
