--- a/Tutorials/Django Tutorials/html_level_one/Part5_html_attributes.html
+++ b/Tutorials/Django Tutorials/html_level_one/Part5_html_attributes.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html>
+  <head>
     <!--  The head contains Meta-data -->
     <!-- Use html+Tab to get the boilerplate  -->
     <!-- Use cmd+/ to get the html comment line -->
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title> Basics Part 5 </title>
-</head>
-<body>
+    <meta charset="utf-8">
+    <title> Basics Part 5 </title>
+  </head>
+  <body>
     <!-- The body contains the actual content -->
     <p>Let's talk about attributes!</p>
     <!-- Let's talk about Attributes! -->
