--- a/Tutorials/Django Tutorials/html_level_two/Part3_Table_Quiz_Solution.html
+++ b/Tutorials/Django Tutorials/html_level_two/Part3_Table_Quiz_Solution.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Quiz Solution</title>
-</head>
-<body>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Quiz Solution</title>
+  </head>
+  <body>
     <table border="2">
 
 
