--- a/Tutorials/Django Tutorials/html_level_two/Part4_Forms_Basics.html
+++ b/Tutorials/Django Tutorials/html_level_two/Part4_Forms_Basics.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Form Basics</title>
-</head>
-<body>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Form Basics</title>
+  </head>
+  <body>
     <!--  You can specify the input type-->
     <!--  Reference Links-->
     <!-- http://www.w3schools.com/TAGs/att_input_type.asp -->
