--- a/Tutorials/Django Tutorials/html_level_two/Part6_Forms_Selections.html
+++ b/Tutorials/Django Tutorials/html_level_two/Part6_Forms_Selections.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Hotel Feedback Form!</title>
-</head>
-<body>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+  </head>
+  <body>
     <h1>Hotel Feedback Form!</h1>
 
       <!-- Things we will cover
