--- a/Tutorials/Django Tutorials/Bootstrap/Bootstrap_Solution_Signup.html
+++ b/Tutorials/Django Tutorials/Bootstrap/Bootstrap_Solution_Signup.html
@@ -24,7 +24,7 @@
       <!-- Add a link to the Signup page -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <div class="navbar-nav">
-          <a class="nav-item nav-link" href="Bootstrap_Project_Main.html">Landing Page</a>
+          <a class="nav-item nav-link" href="Bootstrap_Solution_Main.html">Landing Page</a>
         </div>
       </div><!-- /.navbar-collapse -->
 
