--- a/Tutorials/Django Tutorials/CSS_level_one/CSS_Level_One_Assessment.html
+++ b/Tutorials/Django Tutorials/CSS_level_one/CSS_Level_One_Assessment.html
@@ -4,15 +4,13 @@ For this test, edit the CSS file and complete the commented tasks below!
 You won't be editing and html, but the css file is linked to the html file.
 Watch the video lecture for more info on this! -->
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Assessment Test CSS LEVEL ONE</title>
-  <link rel="stylesheet" href="CSS_Level_One_Test_Solutions.css">
-</head>
-<body>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Assessment Test CSS LEVEL ONE</title>
+    <link rel="stylesheet" href="CSS_Level_One_Test_Solutions.css">
+  </head>
+  <body>
     <h1>Welcome to Free Blog!</h1>
 
     <div class="">
