--- a/Tutorials/Django Tutorials/CSS_level_one/Part2.html
+++ b/Tutorials/Django Tutorials/CSS_level_one/Part2.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="Part2_master.css">
-  <title>Part 2</title>
-</head>
-<body>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="Part2_master.css">
+    <title></title>
+  </head>
+  <body>
     <p>This is a paragraph in the body but outside of the div</p>
 
     <div >
