--- a/Tutorials/Django Tutorials/CSS_level_two/Part1_Fonts.html
+++ b/Tutorials/Django Tutorials/CSS_level_two/Part1_Fonts.html
@@ -1,22 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" href="Part1_Fonts.css">
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+    <link rel="stylesheet" href="Part1_Fonts.css">
 
-  <!-- You can easily add links to Google Fonts or to FontLibrary: -->
+    <!-- You can easily add links to Google Fonts or to FontLibrary: -->
 
-  <!-- fonts.google.com -->
+    <!-- fonts.google.com -->
 
-  <!-- <link href="https://fonts.googleapis.com/css?family=Bungee+Shade" rel="stylesheet"> -->
+    <!-- <link href="https://fonts.googleapis.com/css?family=Bungee+Shade" rel="stylesheet"> -->
 
-  <!-- https://fontlibrary.org/en -->
+    <!-- https://fontlibrary.org/en -->
 
-  <!-- <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/glacial-indifference" type="text/css"/> -->
-  
+    <!-- <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/glacial-indifference" type="text/css"/> -->
+
+
   </head>
   <body>
     <h1>Header 1</h1>
