--- a/Tutorials/Django Tutorials/Document_Object_Model/Part1_MainPage.html
+++ b/Tutorials/Django Tutorials/Document_Object_Model/Part1_MainPage.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DOM Part 1</title>
-</head>
-<body>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Main Page</title>
+  </head>
+  <body>
     <h1>This is the header</h1>
     <p>
 
@@ -39,5 +37,9 @@
       querySelectorAll() will return a list of all matches, querySelector() just
       returns the first match.
     </p>
-</body>
+
+  </body>
+  <script src="Part1_Color_Changer.js">
+
+  </script>
 </html>
