--- a/Tutorials/Django Tutorials/Javascript_level_one/Part3_Exercise.html
+++ b/Tutorials/Django Tutorials/Javascript_level_one/Part3_Exercise.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>JavaScript First Exercise</title>
+  </head>
+  <body>
     <h1>Welcome to your First Exercise!</h1>
     <p>For this exercise we will be creating a weight metric converter</p>
     <p>We will take in a number in pounds (lbs) and convert it to kilograms (kg).
@@ -22,7 +20,9 @@
       <li>Then log/write "Conversion Completed" to the console</li>
     </ul>
 
+
+
     <!-- This links to the solution .js file, link to your own first! -->
-    <script src="js_part3_exercise.js"></script>
-</body>
+    <script src="Part3.js"></script>
+  </body>
 </html>
