--- a/Tutorials/Django Tutorials/CSS_level_one/Part1.html
+++ b/Tutorials/Django Tutorials/CSS_level_one/Part1.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CSS Basics</title>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>CSS Basics</title>
 
-  <!-- Connect the html to the css file -->
-  <link rel="stylesheet" href="Part1_master.css">
-</head>
-<body>
-  
+    <!-- Connect the html to the css file -->
+    <link rel="stylesheet" href="Part1_master.css">
+
+  </head>
+  <body>
+
     <h1>This is the header</h1>
 
     <p>Let's see a list</p>
