--- a/Tutorials/Django Tutorials/CSS_level_one/Part3.html
+++ b/Tutorials/Django Tutorials/CSS_level_one/Part3.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Selectors</title>
-  <link rel="stylesheet" href="Part3_master.css">
-</head>
-<body>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Selectors</title>
+    <link rel="stylesheet" href="Part3_master.css">
+  </head>
+  <body>
     <h3>I'm a h3 Header</h3>
 
     <div class="firstDiv">
