--- a/Tutorials/Django Tutorials/CSS_level_one/Part5.html
+++ b/Tutorials/Django Tutorials/CSS_level_one/Part5.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="Part5_master.css">
-  <title>Document</title>
-</head>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+    <link rel="stylesheet" href="Part5_master.css">
+  </head>
   <body>
     <h4>Specificity</h4>
 
