--- a/Tutorials/Django Tutorials/CSS_level_two/CSS_Level_Two_Spectrum.html
+++ b/Tutorials/Django Tutorials/CSS_level_two/CSS_Level_Two_Spectrum.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Spectrum V</title>
-  <link rel="stylesheet" href="CSS_Level_Two_Spectrum.css">
-  <link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet">
-</head>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Spectrum V</title>
+    <link rel="stylesheet" href="CSS_Level_Two_Spectrum.css">
+    <link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet">
+  </head>
 <!-- https://www.google.com/search?q=spectrum+v&espv=2&biw=1476&bih=983&source=lnms&tbm=isch&sa=X&ved=0ahUKEwjC1Jjph-jQAhXkj1QKHWWXBBcQ_AUIBigB -->
   <h1>Inspired by Spectrum V by the Artist Ellsworth Kelly</h1>
   <body>
